# chbackup

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  build.rs  config.example.yml  docker-compose.test.yml
.github/workflows/: ci.yml  release.yml
coverage/: cobertura.xml
docs/: api.md  backup.md  commands.md  configuration.md  design.md  docker.md  kubernetes.md  migration.md  restore.md  roadmap.md  s3.md
docs/completed/2026-02-16-01-phase0-skeleton/: HANDOFF.md  acceptance.json
docs/completed/2026-02-16-02-phase1-mvp/: HANDOFF.md  SESSION.md  acceptance.json
docs/completed/2026-02-17-01-phase2a-parallelism/: HANDOFF.md  PLAN.md  SESSION.md  acceptance.json
docs/completed/2026-02-17-02-phase2b-incremental/: HANDOFF.md
examples/crontab/: chbackup-cron
examples/docker/: docker-compose.minio.yml  docker-compose.server.yml  docker-compose.yml
examples/kubernetes/: cronjob.yaml  sidecar.yaml
scripts/: build-docker.sh  release.sh
src/: cli.rs  concurrency.rs  config.rs  error.rs  lib.rs  list.rs  lock.rs  logging.rs  main.rs  manifest.rs  object_disk.rs  path_encoding.rs  progress.rs  rate_limiter.rs  resume.rs  table_filter.rs
src/backup/: CLAUDE.md  checksum.rs  collect.rs  diff.rs  freeze.rs  mod.rs  mutations.rs  rbac.rs  sync_replica.rs
src/clickhouse/: CLAUDE.md  client.rs  mod.rs
src/download/: CLAUDE.md  mod.rs  stream.rs
src/restore/: CLAUDE.md  attach.rs  mod.rs  rbac.rs  remap.rs  schema.rs  sort.rs  topo.rs
src/server/: CLAUDE.md  actions.rs  auth.rs  metrics.rs  mod.rs  routes.rs  state.rs
src/storage/: CLAUDE.md  mod.rs  s3.rs
src/upload/: CLAUDE.md  mod.rs  stream.rs
src/watch/: CLAUDE.md  mod.rs
test/: clean-s3.sh  run_tests.sh
test/configs/: chbackup-test.yml  clickhouse-config.xml  generate-s3-disk-config.sh
test/fixtures/: seed_data.sql  seed_large.sql  setup.sql
tests/: config_test.rs
(+546 files in other folders)
