[package]
name = "chbackup"
version = "0.1.0"
edition = "2021"
description = "Drop-in Rust replacement for Altinity/clickhouse-backup"
license = "MIT"

[[bin]]
name = "chbackup"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ClickHouse
clickhouse = { version = "0.13", features = ["inserter", "native-tls"] }
native-tls = "0.2"
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }

# S3
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Compression
lz4_flex = "0.11"
flate2 = "1"
zstd = "0.13"

# Directory walks
walkdir = "2"

# Glob pattern matching (table filter)
glob = "0.3"

# Unix filesystem ops (chown, stat)
nix = { version = "0.29", features = ["fs", "user"] }

# Tar archive creation/extraction
tar = "0.4"

# CRC64 checksum (CRC-64/XZ for ClickHouse compatibility)
crc = "3"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# PID lock (Unix process liveness check)
libc = "0.2"

# HTTP API server
axum = "0.7"
tower-http = { version = "0.6", features = ["auth", "trace"] }
tower = "0.5"
http = "1"
base64 = "0.22"
axum-server = { version = "0.8", features = ["tls-rustls"] }

# Prometheus metrics (Phase 3b)
prometheus-client = "0.23"

# Progress bar
indicatif = "0.18"

# Atomic swap for hot-swappable server state
arc-swap = "1"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
